--- a/index.html
+++ b/index.html
@@ -36,10 +36,10 @@
               >
             </li>
             <li>
-              <a href="#menu" id="Menu" class="nav__link">Menu</a>
+              <a href="#menu" id="menu" class="nav__link">Menu</a>
             </li>
             <li>
-              <a href="#contacts" id="Contacts" class="nav__link">Contacts</a>
+              <a href="#contacts" id="contacts" class="nav__link">Contacts</a>
             </li>
           </ul>
         </nav>
@@ -77,6 +77,7 @@
           <ul class="recipes__videos">
             <li>
               <iframe
+                class="recipes__iframe"
                 width="560"
                 height="315"
                 src="https://www.youtube.com/embed/j6VlT_jUVPc?si=h5Euz0pUjZgdqvQV"
@@ -91,6 +92,7 @@
             </li>
             <li>
               <iframe
+                class="recipes__iframe"
                 width="560"
                 height="315"
                 src="https://www.youtube.com/embed/st571DYYTR8?si=5G9i8PJa6798D9AR"
