--- a/index.html
+++ b/index.html
@@ -28,18 +28,16 @@
           />
           <ul class="nav__links">
             <li>
-              <a href="#recipes" class="nav__link" id="Recipes">Recipes</a>
+              <a href="#recipes" class="nav__link">Recipes</a>
             </li>
             <li>
-              <a href="#book-a-table" id="book-a-table" class="nav__link"
-                >Book a table</a
-              >
+              <a href="#book-a-table" class="nav__link">Book a table</a>
             </li>
             <li>
-              <a href="#menu" id="menu" class="nav__link">Menu</a>
+              <a href="#menu" class="nav__link">Menu</a>
             </li>
             <li>
-              <a href="#contacts" id="contacts" class="nav__link">Contacts</a>
+              <a href="#contacts" class="nav__link">Contacts</a>
             </li>
           </ul>
         </nav>
@@ -68,7 +66,7 @@
         </div>
       </header>
       <main class="content">
-        <section class="recipes">
+        <section id="recipes" class="recipes">
           <h2 class="recipes__title">Recipes</h2>
           <p class="recipes__subtitle">
             Check out some recipes we've collected for your home-brewing
@@ -107,9 +105,9 @@
             </li>
           </ul>
         </section>
-        <section class="reservation"></section>
-        <section class="menu"></section>
-        <section class="about"></section>
+        <section id="book-a-table" class="reservation"></section>
+        <section id="menu" class="menu"></section>
+        <section id="contacts" class="about"></section>
       </main>
       <footer class="footer"></footer>
     </div>
