Project 2 Stage 3 final

--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
         <section id="book-a-table" class="reservation">
           <h2 class="reservation__title">Book a table</h2>
           <form class="reservation__form form">
-            <fielset class="form__feildset">
+            <fieldset class="form__fieldset">
               <label for="name-input" class="form__label">
                 Name *
                 <input
@@ -150,11 +150,11 @@
                   required
                 />
               </label>
-            </fielset>
-            <button class="form__button">book a table</button>
-            <label for="checkbox" class="form__label">
+            </fieldset>
+            <button class="form__button">Book a table</button>
+            <label for="checkbox" class="form__label form__label_type_checkbox">
               <input
-                class="form__input"
+                class="form__checkbox"
                 id="checkbox"
                 type="checkbox"
                 required
