Project_2_stage_4_final_corrected

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       <header class="header">
         <nav class="nav">
           <img
-            src="/images/logo_coffeeshop_dark.svg"
+            src="./images/logo_coffeeshop_dark.svg"
             alt="Triple Espresso"
             class="nav__logo"
           />
@@ -271,7 +271,7 @@
                 <a href="#" class="footer__social-link"
                   ><img
                     src="./images/facebook_white.svg"
-                    alt="Facebook"
+                    alt="Facebook Icon"
                     class="footer__social-icon"
                   />Facebook</a
                 >
@@ -280,7 +280,7 @@
                 <a href="#" class="footer__social-link"
                   ><img
                     src="./images/instagram_white.svg"
-                    alt="Facebook"
+                    alt="Instagram-Icon"
                     class="footer__social-icon"
                   />Instagram</a
                 >
