Project_2_stage_4-final_2nd_corrections

--- a/index.html
+++ b/index.html
@@ -280,7 +280,7 @@
                 <a href="#" class="footer__social-link"
                   ><img
                     src="./images/instagram_white.svg"
-                    alt="Instagram-Icon"
+                    alt="Instagram Icon"
                     class="footer__social-icon"
                   />Instagram</a
                 >
